commit project for github in preparation for netlify forms

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,5 +10,10 @@ html {
   overflow: hidden;
 }
 
+.app {
+  /* background: lightcoral; */
+  height: 100vh;
+}
+
 @media screen and (max-width: 900px) {
 }
