--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -60,8 +60,11 @@
 
 /* MOBILE STYLES */
 .mobile-nav-right {
+  width: 75px;
+  height: 100%;
   display: none;
   margin-right: 20px;
+  justify-content: space-between;
 }
 
 .mobile-nav-right svg {
@@ -79,7 +82,6 @@
   z-index: 5;
   font-family: "Amaranth", sans-serif;
   font-size: 40px;
-  /* display: flex; */
   justify-content: center;
   align-items: center;
   display: none;
@@ -146,7 +148,10 @@
   .mobile-nav-right {
     display: flex;
   }
-  .mobile-nav-right SVG {
+  .mobile-nav-right svg {
     margin-top: -25px;
+  }
+  .mobile-nav-right svg:nth-child(1) {
+    width: 20px;
   }
 }
