--- a/src/components/Socials/socials.css
+++ b/src/components/Socials/socials.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 10px;
+  margin: 0 70px;
 }
 
 .email-container {
@@ -71,5 +71,9 @@
 @media screen and (max-width: 900px) {
   .social-line {
     height: 40px;
+  }
+  .icons-container,
+  .email-container {
+    margin: 0 10px;
   }
 }
